--- a/blocks/v2-video/v2-video.css
+++ b/blocks/v2-video/v2-video.css
@@ -13,7 +13,7 @@
   justify-content: center;
   height: 100vh;
   clip-path: inset(24px 24px round 8px);
-  transition: clip-path 0.3s ease-in-out;
+  transition: clip-path var(--duration-large) ease-in-out;
 }
 
 .v2-video.v2-video--full-width {
@@ -47,10 +47,10 @@
   gap: 8px;
   text-shadow: 0 1.1128px 66.7674px 0 rgb(0 0 0 / 0%);
   font-family: var(--font-family-body);
-  font-size: 16px;
+  font-size: var(--f-body-font-size);
   font-style: normal;
-  line-height: 130%;
-  letter-spacing: 0.5px;
+  line-height: var(--f-body-line-height);
+  letter-spacing: var(--f-body-letter-spacing);
   text-align: center;
 }
 
@@ -60,21 +60,18 @@
 
 .v2-video .v2-video__content p {
   font-family: var(--font-family-body);
-  font-size: 16px;
   font-style: normal;
-  line-height: 130%;
-  letter-spacing: 0.5px;
 }
 
 .v2-video .v2-video__heading {
   font-family: var(--font-family-heading);
-  font-size: 24px;
+  font-size: var(--f-heading-5-font-size);
   font-style: normal;
-  line-height: 125%;
+  line-height: var(--f-heading-5-line-height);
 }
 
 .v2-video .v2-video__content .v2-video__button.primary {
-  font-size: 14px;
+  font-size: var(--f-button-font-size);
   line-height: 100%;
   letter-spacing: 1.25px;
   text-transform: uppercase;
@@ -96,7 +93,9 @@
   }
 
   .v2-video .v2-video__heading {
-    font-size: 32px;
+    font-size: var(--f-heading-4-font-size);
+    line-height: var(--f-heading-4-line-height);
+    letter-spacing: var(--f-heading-4-letter-spacing);
   }
 }
 
