#18 Fix displaying text background

--- a/blocks/v2-video/v2-video.css
+++ b/blocks/v2-video/v2-video.css
@@ -36,6 +36,7 @@
   justify-content: flex-end;
   background: linear-gradient(0deg, rgb(0 0 0 / 50%) 0%, rgb(0 0 0 / 0%) 100%);
   width: 100%;
+  position: relative;
 }
 
 .v2-video .v2-video__content {
