--- a/blocks/v2-footer/v2-footer.css
+++ b/blocks/v2-footer/v2-footer.css
@@ -19,12 +19,12 @@
   list-style: none;
 }
 
-.v2-footer__links-wrapper :is(h3, li, p, a) {
+.v2-footer-links-wrapper :is(h3, li, p, a) {
   margin-bottom: 0;
   color: var(--c-main-black);
 }
 
-.v2-footer__list h3 {
+.v2-footer-list h3 {
   font-weight: bold;
   border-top: 1px solid var(--border-color);
   cursor: pointer;
@@ -33,18 +33,18 @@
   align-items: center;
 }
 
-.v2-footer__list:not(.expand) h3:hover {
+.v2-footer-list:not(.expand) h3:hover {
   background-color: #B8DeD8;
 }
 
-.v2-footer__list-item {
+.v2-footer-list-item {
   transition: 300ms max-height ease;
   will-change: max-height;
   overflow: hidden;
   max-height: 0;
 }
 
-.v2-footer__list-item a {
+.v2-footer-list-item a {
   display: flex;
   padding-left: 16px;
   padding-right: 16px;
@@ -64,14 +64,14 @@
   display: none;
 }
 
-.v2-footer__seperator {
+.v2-footer-seperator {
   height: 1px;
   background-color: var(--border-color);
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.v2-footer__copyright-wrapper {
+.v2-footer-copyright-wrapper {
   display: flex;
   padding: 12px 0;
   flex-direction: column;
@@ -80,7 +80,7 @@
   gap: 6px;
 }
 
-.v2-footer__bar {
+.v2-footer-bar {
   display: flex;
   padding-top: 12px;
   padding-bottom: 12px;
@@ -88,8 +88,8 @@
   align-items: center;
 }
 
-.v2-footer__bar a,
-.v2-footer__copyright p {
+.v2-footer-bar a,
+.v2-footer-copyright p {
   color: var(--volvo-text-gray);
   margin: 0;
   padding-top: 8px;
@@ -105,11 +105,11 @@
   color: var(--c-cta-blue-hover);
 }
 
-.v2-footer__bar li:not(:first-child) {
+.v2-footer-bar li:not(:first-child) {
   padding-left: 8px;
 }
 
-.v2-footer__bar li:not(:last-child) {
+.v2-footer-bar li:not(:last-child) {
   border-right: 1px solid var(--volvo-text-gray);
   padding-right: 8px;
 }
@@ -137,8 +137,8 @@
   background-color: var(--c-grey-100);
 }
 
-.v2-footer__list:not(.expand) h3:focus,
-.v2-footer__list-item a:focus,
+.v2-footer-list:not(.expand) h3:focus,
+.v2-footer-list-item a:focus,
 .v2-footer-bar a:focus,
 .v2-scroll-to-top:focus {
   outline: 2px solid var(--light-border-focus);
@@ -150,53 +150,53 @@
 
 /* desktop */
 @media screen and (min-width: 1200px) {
-  .v2-footer__links-wrapper,
-  .v2-footer__copyright-wrapper {
+  .v2-footer-links-wrapper,
+  .v2-footer-copyright-wrapper {
     width: calc(var(--wrapper-width) - 100px);
     margin: 0 auto;
   }
 
-  .v2-footer__links-wrapper {
+  .v2-footer-links-wrapper {
     padding-top: 55px;
     padding-bottom: 55px;
   }
 
-  .v2-footer__list h3 {
+  .v2-footer-list h3 {
     border-top: 0;
     padding: 0;
     cursor: initial;
   }
 
-  .v2-footer__list:not(.expand) h3:hover {
+  .v2-footer-list:not(.expand) h3:hover {
     background-color: transparent;
   }
 
-  .v2-footer__list-wrapper {
+  .v2-footer-list-wrapper {
     display: flex;
     max-width: 1200px;
     gap: 20px
   }
 
-  .v2-footer__list, 
-  .v2-footer__list-item {
+  .v2-footer-list, 
+  .v2-footer-list-item {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
   }
 
-  .v2-footer__list {
+  .v2-footer-list {
     flex: 1;
     gap: 24px;
   }
 
-  .v2-footer__list-item {
+  .v2-footer-list-item {
     gap: 20px;
     max-height: 100%;
     overflow: auto;
   }
 
   
-  .v2-footer__list-item a {
+  .v2-footer-list-item a {
     gap: 16px;
     align-items: center;
     padding: 0;
@@ -215,13 +215,13 @@
     display: flex;
   }
 
-  .v2-footer__copyright-wrapper {
+  .v2-footer-copyright-wrapper {
     flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
   }
 
-  .v2-footer__text-icon-wrapper {
+  .v2-footer-text-icon-wrapper {
     display: flex;
     gap: 4px;
   }
