add general style to center text

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -964,6 +964,10 @@ main.blue-contract .section.section-with-title p {
 }
 
 /* REDESIGN GLOBAL STYLES */
+.text-center {
+  text-align: center;
+}
+
 .redesign-v2 {
   font-size: 16px;
 }
