--- a/blocks/v2-footer/v2-footer.css
+++ b/blocks/v2-footer/v2-footer.css
@@ -25,7 +25,7 @@
 }
 
 .v2-footer-list h3 {
-  font-weight: bold;
+  font-family: var(--ff-volvo-novum-medium);
   border-top: 1px solid var(--border-color);
   cursor: pointer;
   padding: 28px 16px;
@@ -51,8 +51,13 @@
   padding-bottom: 16px;
 }
 
-.icon-accordion {
+.icon-arrow-down {
   margin-left: auto;
+  transition: 300ms ease-in-out;
+}
+
+.v2-footer-list.expand .icon-arrow-down {
+  transform: scaleY(-1);
 }
 
 .icon-newtab,
@@ -64,7 +69,7 @@
   display: none;
 }
 
-.v2-footer-seperator {
+.v2-footer-separator {
   height: 1px;
   background-color: var(--border-color);
   margin-top: 0;
@@ -202,7 +207,7 @@
     padding: 0;
   }
 
-  .icon-accordion {
+  .icon-arrow-down {
     display: none;
   }
 
