--- a/blocks/v2-footer/v2-footer.css
+++ b/blocks/v2-footer/v2-footer.css
@@ -33,10 +33,6 @@
   align-items: center;
 }
 
-.v2-footer-list:not(.expand) h3:hover {
-  background-color: #B8DeD8;
-}
-
 .v2-footer-list-item {
   transition: 300ms max-height ease;
   will-change: max-height;
@@ -78,8 +74,8 @@
 
 .v2-footer-copyright-wrapper {
   display: flex;
-  padding: 12px 0;
-  flex-direction: column;
+  padding: 12px 16px;
+  flex-flow: column;
   justify-content: center;
   align-items: center;
   gap: 6px;
