--- a/blocks/v2-video/v2-video.css
+++ b/blocks/v2-video/v2-video.css
@@ -1,5 +1,7 @@
 /* stylelint-disable selector-class-pattern */
 .v2-video-wrapper {
+  --video-inset: inset(32px 48px round 8px);
+
   padding: 0 !important;
   color: var(--c-white);
   margin: 0 !important;
@@ -69,7 +71,7 @@
   line-height: var(--f-heading-5-line-height);
 }
 
-.v2-video .v2-video__content .v2-video__button.primary {
+.v2-video .v2-video__button.button.primary {
   font-size: var(--f-button-font-size);
   line-height: 100%;
   letter-spacing: 1.25px;
@@ -84,7 +86,7 @@
 
 @media (min-width: 744px) {
   .v2-video {
-    clip-path: inset(32px 48px round 8px);
+    clip-path: var(--video-inset);
   }
 
   .v2-video .v2-video__content {
