#18 Fixes after CR

--- a/blocks/v2-video/v2-video.css
+++ b/blocks/v2-video/v2-video.css
@@ -1,25 +1,29 @@
 /* stylelint-disable selector-class-pattern */
-.v2-video-wrapper {
-  --video-inset: inset(32px 48px round 8px);
 
-  padding: 0 !important;
+/* Full width block */
+main .section.v2-video-container .v2-video-wrapper {
+  padding: 0;
   color: var(--c-white);
-  margin: 0 !important;
-  width: 100% !important;
+  margin: 0;
+  width: 100%;
 }
 
+/* End Full width block */
+
 .v2-video {
+  --video-inset: inset(24px 24px round 8px);
+
   position: relative;
   overflow: hidden;
   display: flex;
   justify-content: center;
   height: 100vh;
-  clip-path: inset(24px 24px round 8px);
+  clip-path: var(--video-inset);
   transition: clip-path var(--duration-large) ease-in-out;
 }
 
 .v2-video.v2-video--full-width {
-  clip-path: inset(0 0 round 0);
+  --video-inset: inset(0 0 round 0);
 }
 
 .v2-video .v2-video__video {
@@ -39,6 +43,7 @@
   background: linear-gradient(0deg, rgb(0 0 0 / 50%) 0%, rgb(0 0 0 / 0%) 100%);
   width: 100%;
   position: relative;
+  align-items: center;
 }
 
 .v2-video .v2-video__content {
@@ -75,7 +80,6 @@
   font-size: var(--f-button-font-size);
   line-height: 100%;
   letter-spacing: 1.25px;
-  text-transform: uppercase;
   padding: 9px 0;
   background: transparent;
   color: var(--c-white);
@@ -86,11 +90,12 @@
 
 @media (min-width: 744px) {
   .v2-video {
-    clip-path: var(--video-inset);
+    --video-inset: inset(32px 48px round 8px);
   }
 
   .v2-video .v2-video__content {
     margin: 64px;
+    max-width: 400px;
   }
 
   .v2-video .v2-video__heading {
@@ -102,16 +107,16 @@
 
 @media (min-width: 1200px) {
   .v2-video {
-    clip-path: inset(140px calc((100vw - var(--wrapper-width)) / 2) round 8px);
+    --video-inset: inset(140px calc((100vw - var(--wrapper-width)) / 2) round 8px);
   }
 
   .v2-video .v2-video__content-wrapper {
     justify-content: center;
+    align-items: flex-start;
   }
 
   .v2-video .v2-video__content {
     margin: auto calc((100vw - 1200px) / 2 + 135px);
     text-align: left;
-    max-width: 406px;
   }
 }
