--- a/blocks/teaser-cards/teaser-cards.css
+++ b/blocks/teaser-cards/teaser-cards.css
@@ -179,10 +179,7 @@
   .teaser-cards-1 .block.teaser-cards p.image::after {
     display: block;
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    inset: 0;
     background-color: black;
     content: "";
     opacity: .15;
