--- a/blocks/teaser-grid/teaser-grid.css
+++ b/blocks/teaser-grid/teaser-grid.css
@@ -67,10 +67,7 @@
 
 .block.teaser-grid>ul>li>* {
     position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
+    inset: 0;
 }
 
 .block.teaser-grid>ul>li img {
