--- a/blocks/v2-masonry-grid/v2-masonry-grid.css
+++ b/blocks/v2-masonry-grid/v2-masonry-grid.css
@@ -1,6 +1,10 @@
 :root {
   --v2-masonry-grid-gutter: 16px;
-  --v2-masonry-grid-text-max-width: 506px;
+  --v2-masonry-grid-margin-bottom: 80px;
+}
+
+.v2-masonry-grid {
+  margin-bottom: var(--v2-masonry-grid-margin-bottom);
 }
 
 .v2-masonry-grid__items {
@@ -55,13 +59,6 @@
   width: 100%;
 }
 
-.v2-masonry-grid__text {
-  margin: 0 auto 40px;
-  max-width: var(--v2-masonry-grid-text-max-width);
-  text-align: center;
-  text-wrap: balance;
-}
-
 @media screen and (min-width: 744px) {
   .v2-masonry-grid__items {
     grid-template-columns: repeat(4, calc(25% - var(--v2-masonry-grid-gutter)));
@@ -92,6 +89,6 @@
 @media screen and (min-width: 1200px) {
   :root {
     --v2-masonry-grid-gutter: 32px;
-    --v2-masonry-grid-text-max-width: 700px;
+    --v2-masonry-grid-margin-bottom: 140px;
   }
 }
