--- a/blocks/v2-hero/v2-hero.css
+++ b/blocks/v2-hero/v2-hero.css
@@ -79,8 +79,8 @@
   max-width: 600px;
 }
 
-.v2-hero--centered .v2-hero__content-wrapper .v2-hero__content > *,
-.v2-hero--bottom .v2-hero__content-wrapper .v2-hero__content > * {
+.v2-hero--centered .v2-hero__content > *,
+.v2-hero--bottom .v2-hero__content > * {
   margin-left: auto;
   margin-right: auto;
 }
